fix: styles and spacing

--- a/frontend_angular/src/app/public/welcome-page/welcome-page.component.css
+++ b/frontend_angular/src/app/public/welcome-page/welcome-page.component.css
@@ -3,11 +3,17 @@
 } */
 
 .container {
-    height: 100vh;
+    height: auto;
+    width: 100%;
     display: flex;
     flex-direction: column;
     /* justify-content: center; */
     align-items: center;
+    background-color: #f4f4f9;
+}
+
+.app-content {
+    background-image: url('/src/assets/landing_bg.jpg');
 }
 
 section {
@@ -17,14 +23,26 @@ section {
     align-items: center;
 
     width: 80%;
-
+    margin: 2rem 0;
 }
 
- /* estiliza la siguiente etiqueta como un boton  */
+.contact-options {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    width: 80%;
+}
+
+.contact-options a {
+    margin: 0 10px;
+}
+
+/* estiliza la siguiente etiqueta como un boton  */
 a {
     display: inline-block;
     padding: 10px 20px;
-    color: black;
+    color: white;
     width: 25%;
     text-align: center;
     background-color: green;
@@ -32,23 +50,23 @@ a {
     border-radius: 5px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: background-color 0.3s ease;
+    margin-top: 1rem;
 }
 
 a:hover {
     background-color: darkgreen;
 }
 
-
 h1 {
     color: #212121;
-    font-size: 25px;
+    font-size: 30px;
     text-align: center;
     margin: 15px;
 }
 
 h3 {
     color: #212121;
-    font-size: 20px;
+    font-size: 25px;
     text-align: center;
     margin: 0;
     margin-top: 10px;
@@ -56,4 +74,75 @@ h3 {
 
 p {
     text-align: center;
+}
+
+.contact {
+    margin-bottom: 5rem;
+}
+
+/* Media Queries */
+@media (max-width: 1200px) {
+    section {
+        width: 90%;
+    }
+
+    a {
+        width: 30%;
+    }
+}
+
+@media (max-width: 992px) {
+    section {
+        width: 95%;
+    }
+
+    a {
+        width: 35%;
+    }
+
+    h1 {
+        font-size: 28px;
+    }
+
+    h3 {
+        font-size: 22px;
+    }
+}
+
+@media (max-width: 768px) {
+    section {
+        width: 100%;
+    }
+
+    a {
+        width: 40%;
+    }
+
+    h1 {
+        font-size: 26px;
+    }
+
+    h3 {
+        font-size: 20px;
+    }
+    .contact-options {
+        flex-direction: column;
+    }
+    .contact-options a {
+        margin: 10px 0;
+    }
+}
+
+@media (max-width: 576px) {
+    a {
+        width: 50%;
+    }
+
+    h1 {
+        font-size: 24px;
+    }
+
+    h3 {
+        font-size: 18px;
+    }
 }
